<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/Button02"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/editText1"
        android:gravity="center"
        android:text="@string/show"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/TextView02"
        android:gravity="center"
        android:text="@string/season"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:gravity="center"
        android:text="@string/episode"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text=" " />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/Button02"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/cancelbutton" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/Button02"
        android:layout_alignBottom="@+id/Button02"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/Button02"
        android:text="@string/addbutton" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="Button"
        android:visibility="invisible" />

</RelativeLayout>
